# llm-zero

./: .gitignore  README.md  pyproject.toml
models/: gigaverbo_tk.model  gigaverbo_tk.vocab
notebook/: 2-tokenizacao.ipynb  3-embedding.ipynb  4-atencao.ipynb  5-bloco-transformer.ipynb  6-arquitetura-gpt.ipynb  7-train-model.ipynb
src/: dataloader.py  main.py  model.py  train_model.py
