[project]
name = "llm-zero"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.2.1",
    "matplotlib>=3.10.0",
    "nbformat>=5.10.4",
    "openai>=1.59.7",
    "pandas>=2.2.3",
    "peft>=0.14.0",
    "plotly>=5.24.1",
    "polars>=1.19.0",
    "regex>=2024.11.6",
    "seaborn>=0.13.2",
    "sentencepiece>=0.2.0",
    "torch>=2.5.1",
    "tqdm>=4.67.1",
    "transformers>=4.48.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
